use modified version of drag node in group

--- a/demos/drag-node-with-group.html
+++ b/demos/drag-node-with-group.html
@@ -39,7 +39,7 @@
        color: '#bae7ff'
      },
      modes: {
-       default: ['drag-group', 'collapse-expand-group', 'drag-node-with-group']
+       default: ['drag-group', 'collapse-expand-group', 'mc-drag-node-with-group']
      },
      groupStyle: {
       default: {
