allow setting individual styling for groups when expanding collapsing and dragging

--- a/demos/drag-node-with-group.html
+++ b/demos/drag-node-with-group.html
@@ -136,7 +136,19 @@
          {
            id: 'group1',
            title: '1',
-           parentId: 'p1'
+           parentId: 'p1',
+           styles: {
+            collapseStyle: {
+              lineWidth: 10,
+              fill: 'blue',
+              stroke: '#ff5050'
+            },
+            defaultStyle: {
+              lineWidth: 5,
+              fill: 'red',
+              stroke: 'green'
+            }
+           }
          },
          {
            id: 'group2',
